--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@refs/main",
   "version": "1.0.0",
-  "main": "dist/index.js"
+  "main": "dist/index.js",
+  "dependencies": {
+    "@refs/hello": "1.0.0"
+  }
 }
