--- a/packages/hello/package.json
+++ b/packages/hello/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@refs/hello",
   "version": "1.0.0",
-  "main": "dist/index.js"
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts"
 }
