--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
-    "outDir": "dist",
+    "outFile": "../../dist/main.js",
     "rootDir": "src"
   },
   "references": [
-    { "path": "../hello" }
+    { "path": "../hello", "prepend": true }
   ]
 }
