--- a/packages/tsconfig-base.json
+++ b/packages/tsconfig-base.json
@@ -2,17 +2,12 @@
   "compilerOptions": {
     "strict": true,
     "moduleResolution": "node",
+    "module": "AMD",
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "target": "ES2019",
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "declaration": true,
-    "declarationMap": true,
-    "composite": true,
-    "baseUrl": ".",
-    "paths": {
-      "@refs*": [".*"]
-    }
+    "declarationMap": true
   }
 }
